--- a/_pages/team/index.html
+++ b/_pages/team/index.html
@@ -18,7 +18,7 @@ permalink: /team/
         <div class="col-md-2">
             <a href={{member.url}}>
                 <img src="{{ site.url }}{{ site.baseurl }}/images/team/{{ member.image }}"
-                    class="card-img img-responsive img-thumbnail" style="filter: grayscale(100%); max-width: 100px;" />
+                    class="card-img img-responsive img-thumbnail" style="max-width: 100px;" />
             </a>
         </div>
 
@@ -42,7 +42,7 @@ permalink: /team/
         <div class="col-md-2">
             <a href={{member.url}}>
                 <img src="{{ site.url }}{{ site.baseurl }}/images/team/{{ member.image }}"
-                    class="card-img img-responsive img-thumbnail" style="filter: grayscale(100%); max-width: 100px;" />
+                    class="card-img img-responsive img-thumbnail" style="max-width: 100px;" />
             </a>
         </div>
 
