--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,52 +1,72 @@
 ---
 title: "Publications"
 layout: default
-excerpt: "RT2 Lab -- Publications."
+excerpt: "EduNLP Lab—Publications."
 sitemap: false
 permalink: /publications/
 ---
 
-<h1>{{page.title}}</h1>
+<h1 class="mb-3">{{ page.title }}</h1>
 
-<div class="panel-group" id="accordion">
-    <div class="panel panel-default">
-
+<div class="row">
     {% for publi in site.data.publications %}
-        <div class="panel-heading">
-            <a data-toggle="collapse" data-parent="#accordion"
-               href="#collapse{{forloop.index}}"
-               style="color: inherit;">
-            <!-- authors -->
-            {% assign authors = "" | split:"/" %}
-            {% for author in publi.author %}
-                {% assign authors = authors | push: author.family %}
-            {% endfor %}
-            {{ authors | array_to_sentence_string }},
+    <div class="col-md-6 col-lg-4 mb-4">
+        <div class="card h-100 shadow-sm">
+            <div class="card-body d-flex flex-column">
+                {%- assign link = publi.URL | default: publi.DOI | default: publi.id -%}
+                <h4 class="card-title">
+                    {% if link %}
+                    <a href="{% if publi.DOI %}https://doi.org/{{ publi.DOI }}{% else %}{{ link }}{% endif %}"
+                        target="_blank" rel="noopener">
+                        {{ publi.title }}
+                    </a>
+                    {% else %}
+                    {{ publi.title }}
+                    {% endif %}
+                </h4>
 
-            <!-- title with link -->
-            "{{ publi.title }}",
+                <p class="card-text text-muted">
+                    {{ publi.abstract | default: publi.abstractNote | truncatewords: 38 }}
+                </p>
 
-            <!-- container -->
-            <b>{{ publi.container-title }}</b>
+                <!-- Authors -->
+                <p class="mb-1">
+                    {% assign names = "" | split:"|" %}
+                    {% for a in publi.author %}
+                    {% assign full = a.given | append: " " | append: a.family %}
+                    {% assign names = names | push: full %}
+                    {% endfor %}
+                    <strong>{{ names | array_to_sentence_string }}</strong>
+                </p>
 
-            <!-- issued date -->
-            ({{ publi.issued.date-parts | jsonify | slice: 3,4 }}),
+                <!-- Venue · Year -->
+                <p class="text-muted fst-italic">
+                    {%- assign venue = publi["container-title"] | default: publi.venue | default: publi.publisher -%}
+                    {{ venue }}
+                    {%- assign year = publi.issued["date-parts"] | first | first -%}
+                    {% if year %} &nbsp;&middot;&nbsp; {{ year }}{% endif %}
+                </p>
 
-            <!-- DOI -->
-            {% if publi.DOI %}
-                <a href="https://doi.org/{{publi.DOI}}">DOI:{{publi.DOI}}</a>
-            {% endif %}
-            </a>
-        </div>
+                <div class="mt-auto pt-1">
+                    {% if publi.citation %}
+                    <details class="d-inline-block me-2">
+                        <summary class="btn btn-sm btn-outline-secondary">Cite</summary>
+                        <pre class="mt-2 mb-0 small">{{ publi.citation }}</pre>
+                    </details>
+                    {% elsif link %}
+                    <a class="btn btn-sm btn-outline-secondary me-2"
+                        href="{% if publi.DOI %}https://doi.org/{{ publi.DOI }}{% else %}{{ link }}{% endif %}"
+                        target="_blank" rel="noopener">Cite</a>
+                    {% endif %}
 
-        <div id="collapse{{forloop.index}}" class="panel-collapse collapse">
-            <div class="panel-body">
-                <p>{{ publi.abstract }}</p>
-
-                <a class="btn btn-outline-primary" href="https://doi.org/{{publi.DOI}}"
-                   role="button" target="blank">Link</a>
+                    {% if link %}
+                    <a class="btn btn-sm btn-outline-primary"
+                        href="{% if publi.DOI %}https://doi.org/{{ publi.DOI }}{% else %}{{ link }}{% endif %}"
+                        target="_blank" rel="noopener">URL</a>
+                    {% endif %}
+                </div>
             </div>
         </div>
-    {% endfor %}
     </div>
+    {% endfor %}
 </div>
