--- a/_pages/team/index.html
+++ b/_pages/team/index.html
@@ -17,7 +17,7 @@ permalink: /team/
     <div class="row mt-3">
         <div class="col-md-2">
             <a href={{member.url}}>
-                <img src="{{ site.url }}{{ site.baseurl }}/images/team/{{ member.image }}"
+                <img src="{{ site.url }}{{ site.baseurl }}/assets/images/team/{{ member.image }}"
                     class="card-img img-responsive img-thumbnail" style="max-width: 100px;" />
             </a>
         </div>
@@ -41,7 +41,7 @@ permalink: /team/
     <div class="row mt-3">
         <div class="col-md-2">
             <a href={{member.url}}>
-                <img src="{{ site.url }}{{ site.baseurl }}/images/team/{{ member.image }}"
+                <img src="{{ site.url }}{{ site.baseurl }}/assets/images/team/{{ member.image }}"
                     class="card-img img-responsive img-thumbnail" style="max-width: 100px;" />
             </a>
         </div>
