--- a/_pages/team/index.html
+++ b/_pages/team/index.html
@@ -16,8 +16,8 @@ permalink: /team/
 <div class="card team-member-card">
     <div class="row mt-3">
         <div class="col-md-2">
-            <a href={{member.url}}>
-                <img src="{{ site.url }}{{ site.baseurl }}/assets/images/team/{{ member.image }}"
+            <a href="{{ member.url | relative_url }}">
+                <img src="{{ '/assets/images/team/' | append: member.image | relative_url }}"
                     class="card-img img-responsive img-thumbnail" style="max-width: 100px;" />
             </a>
         </div>
@@ -40,8 +40,8 @@ permalink: /team/
 <div class="card team-member-card">
     <div class="row mt-3">
         <div class="col-md-2">
-            <a href={{member.url}}>
-                <img src="{{ site.url }}{{ site.baseurl }}/assets/images/team/{{ member.image }}"
+            <a href="{{ member.url | relative_url }}">
+                <img src="{{ '/assets/images/team/' | append: member.image | relative_url }}"
                     class="card-img img-responsive img-thumbnail" style="max-width: 100px;" />
             </a>
         </div>
